--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
         "@type": "WebApplication",
         "name": "LinkFly",
         "description": "Encurte seus links de forma rápida e prática. Transforme URLs longas em links curtos e fáceis de compartilhar.",
-        "url": "https://linkfly.app.br",
+        "url": "https://www.linkfly.app.br",
         "applicationCategory": "UtilitiesApplication",
         "operatingSystem": "All",
         "creator": {
