--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,26 @@
       content="Use o LinkFly para transformar links longos em URLs curtas perfeitas para compartilhamentos. Simples, rápido e grátis!
       "
     />
-    <meta property="og:image" content="./images/logo-png.png" />
-    <meta name="twitter:card" content="./images/logo-png.png" />
+    <meta
+      property="og:image"
+      content="https://www.linkfly.app.br/images/logo-png.png"
+    />
+    <meta
+      name="twitter:card"
+      content="https://www.linkfly.app.br/images/logo-png.png"
+    />
     <meta name="twitter:title" content="LinkFly - Encurtador de Link Rápido" />
     <meta
       name="twitter:description"
       content="Encurte seus links de forma rápida e prática. Transforme URLs longas em links curtos e fáceis de compartilhar."
     />
+    <meta
+      name="keywords"
+      content="encurtador de links, link curto, URL shortener, encurtar URL, LinkFly, link rápido, link grátis"
+    />
+    <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
+    <link rel="canonical" href="https://www.linkfly.app.br" />
+
     <meta name="twitter:image" content="./images/logo-png.png" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
@@ -45,7 +58,8 @@
         "creator": {
           "@type": "Person",
           "name": "Matheus Soares"
-        }
+        },
+        "logo": "https://www.linkfly.app.br/images/logo-png.png"
       }
     </script>
   </head>
