--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Encurtador de Links Rápido e Fácil - LinkFly</title>
+
+    <title>
+      Encurtador de Links Grátis - LinkFly | Encurte URLs Rapidamente
+    </title>
     <meta
       name="description"
       content="LinkFly: O encurtador de links rápido e fácil. Transforme URLs longas em links curtos ideais para redes sociais e compartilhamentos.
