update `meta description`

--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,12 @@
     <title>
       Encurtador de Links Grátis - LinkFly | Encurte URLs Rapidamente
     </title>
+
     <meta
       name="description"
-      content="LinkFly: O encurtador de links rápido e fácil. Transforme URLs longas em links curtos ideais para redes sociais e compartilhamentos.
-      "
+      content="LinkFly é um encurtador de links rápido, fácil e grátis. Transforme URLs longas em links curtos, ideais para redes sociais e compartilhamentos. Encurte agora!"
     />
+
     <meta name="robots" content="index, follow" />
     <meta
       property="og:title"
