update `meta keywords`

--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,12 @@
       name="twitter:description"
       content="Encurte seus links de forma rápida e prática. Transforme URLs longas em links curtos e fáceis de compartilhar."
     />
+
     <meta
       name="keywords"
-      content="encurtador de links, link curto, URL shortener, encurtar URL, LinkFly, link rápido, link grátis"
+      content="encurtador de links, encurtar URL, link curto, URL shortener, encurtar link grátis, LinkFly, link rápido, ferramenta de link curto"
     />
+
     <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
     <link rel="canonical" href="https://www.linkfly.app.br" />
 
