--- a/public/index.html
+++ b/public/index.html
@@ -73,9 +73,10 @@
     <div class="container">
       <img
         src="./images/logo-png.png"
-        alt="LinkFly - Encurtador de Links"
+        alt="LinkFly - Encurtador de Links Simples e Rápido"
         class="logo"
       />
+      <h1>Encurtador de Links Grátis e Rápido - LinkFly</h1>
 
       <h2>Encurte seus links rapidamente</h2>
       <p class="description">
