update script type application/ld+json

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,13 @@
           "@type": "Person",
           "name": "Matheus Soares"
         },
-        "logo": "https://www.linkfly.app.br/images/logo-png.png"
+        "logo": "https://www.linkfly.app.br/images/logo-png.png",
+        "datePublished": "2025-01-01",
+        "keywords": "encurtador de links, link curto, URL shortener, encurtar URL, LinkFly, link rápido, link grátis",
+        "language": "pt-BR",
+        "accessibilityAPI": "http://www.w3.org/WAI/WCAG21/Techniques/General/G108",
+        "accessibilityControl": "keyboard, mouse",
+        "additionalType": "https://schema.org/SoftwareApplication"
       }
     </script>
   </head>
